--- a/css/global.css
+++ b/css/global.css
@@ -141,7 +141,7 @@ fieldset.form-element {
 }
 h4 {
 	padding: 0 0 10px;
-	font-size: 18px;
+	font-size: 1.125em;
 }
 .form-element,
 .form-element-right {
@@ -156,7 +156,7 @@ h4 {
 .form-element label,
 .form-element-right label {
 	display:block;
-	font-size:12px;
+	font-size: 0.750em;
 	color: #666666;
 	margin:10px 0 0;
 }
@@ -168,7 +168,7 @@ h4 {
 .form-element-with-notes .notes {
 	float: left;
 	width: 200px;
-	font-size: 10px;
+	font-size: 0.625em;
 	padding-left: 20px;
 }
 .form-element-with-notes .under-notes {
@@ -176,7 +176,7 @@ h4 {
 	padding-top: 10px;
 	float: left;
 	clear:left;
-	font-size:12px;
+	font-size: 0.750em;
 	width:410px;
 }
 .form-element-with-notes textarea {
@@ -191,7 +191,7 @@ h4 {
  */
 .two-column {
 	position:relative;
-	font-size:12px;
+	font-size: 1em;
 	color: #666666;
 	padding: 10px 0 0 200px;
 	
@@ -209,7 +209,7 @@ h4 {
 }
 
 .two-column label {
-	font-size:12px;
+	font-size: 0.750em;
 	color: #666666;
 	margin: 0 0 5px;
 	display:block;
@@ -227,7 +227,7 @@ h4 {
 	padding: 0;
 }
 #dialog-email .description-summary {
-	font-size:12px;
+	font-size: 0.750em;
 }
 .description-summary h3,
 .description-summary h4,
@@ -243,7 +243,7 @@ h4 {
 #dialog-email .form-element label.form-label {
 	width: 70px;
 	text-align: left;
-	font-size: 16px;
+	font-size: 1.000em;
 	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
 }
 .description-summary p,
@@ -298,13 +298,13 @@ h4 {
 .titled-box .box-title,
 .squared-box .box-title {
 	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
-	font-size: 22px;
+	font-size: 1.375em;
 	/*color: #6E6E6E;*/
 	color: #444444; /* TM 7/4 :psd's show 444*/
 	font-weight: normal;
 }
 .squared-box .box-title.discreet {
-	font-size: 14px;
+	font-size: 0.875em;
 	font-weight: bold;
 	padding-top: 15px;
 	padding-bottom: 10px;
@@ -335,7 +335,7 @@ h4 {
 }
 .squared-box .box-title .title-area-right,
 .titled-box .box-title .title-area-right {
-	font-size: 12px;
+	font-size: 0.563em;
 	color: #666666; /* TM 7/4 :psd's show 666*/
 	font-weight: regular;
 	float:right;
@@ -347,7 +347,7 @@ h4 {
 	right: 0;
 	height: 10px;
 	background: url(../images/bkgd_box_footer.png) no-repeat scroll right top transparent;
-	font-size: 16px;
+	font-size: 1.000em;
 	font-weight: normal;
 	margin: 0;
 }
@@ -380,7 +380,7 @@ h4 {
 }
 .squared-box h3,
 .titled-box h3 {
-	font-size: 16px;
+	font-size: 1em;
 	color: #999999;
 }
 /* Squared-corners/no drop-shadow */
@@ -412,7 +412,7 @@ h4 {
 	padding: 8px 0;
 }
 .squared-box p {
-	font-size: 14px;
+	font-size: .875em;
 }
 .titled-box p,
 .squared-box p {
@@ -432,7 +432,7 @@ h4 {
 	padding-left: 12px;
 }
 .back-arrow  a{
-	font-size: 14px;
+	font-size: 0.875em;
 }
 /**
  * Photo Box
@@ -452,12 +452,12 @@ h4 {
 	width:150px;
 	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
 	text-shadow: 2px 0px 0px #FFFFFF;
-	font-size: 22px;
+	font-size: 1.375em;
 	color: #1C1C1C;
 	line-height: 1;
 }
 .photo-box p strong {
-	font-size: 30px;
+	font-size: 1.364em;
 }
 /**
  * Front-page specific
@@ -476,7 +476,7 @@ h4 {
 	width:240px;
 	padding-right:10px;
 	border-right:1px solid #cccccc;
-	font-size: 14px;
+	font-size: 0.875em;
 }
 .body-left ul {
 	font-family: "HelveticaNeueLTStd", Helvetica, Arial, sans-serif;
@@ -486,7 +486,7 @@ h4 {
 .body-left ul li {
 	background: url(../images/icon_check.png) no-repeat scroll 0 0 transparent;
 	padding-left:15px;
-	font-size:16px;
+	font-size: 1.125em;
 	color: #444444;
 }
 .body-right {
@@ -495,14 +495,14 @@ h4 {
 	padding-left: 25px;
 }
 h3.discreet {
-	font-size: 14px;
+	font-size: 0.875em;
 	color: #444444;
 	font-weight: bold;
 }
 .body-right p.error {
 	margin-right: 10px;
 	padding: 0 0 5px;
-	font-size: 11px;
+	font-size: 0.688em;
 	font-family: "HelveticaNeueBold", Helvetica, Arial, sans-serif;
 	color: #e34848;
 }
@@ -510,7 +510,7 @@ h3.discreet {
 	float:left;
 	position:relative;
 	padding-left: 25px;
-	font-size: 12px;
+	font-size: 0.750em;
 	color: #555555;
 }
 .remember-area input {
@@ -531,7 +531,7 @@ h3.discreet {
 }*/
 /*.submit {
 	font-family: "HelveticaNeueBold", Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 0.875em;
 	text-shadow: 1px 0px 0px rgba(0,0,0,0.2);
 }
 */
@@ -608,14 +608,14 @@ h3.discreet {
  *
  */
 #service-request .two-column .label-column {
-	font-size: 18px;
+	font-size: 1.125em;
 }
 
 /**
  * Page specific to make-onetime-payment.html
  */
 .balance table {
-	font-size: 12px;
+	font-size: 0.750em;
 	font-weight: bold;
 }
 .balance table td.description {
@@ -634,7 +634,7 @@ h3.discreet {
 
 .balance table tfoot #total {
 	font-weight: 100;
-	font-size: 18px;
+	font-size: 1.5em;
 }
 
 /**
@@ -655,7 +655,7 @@ h3.discreet {
 	opacity: 1;
 }
 .switchable .squared-accordion p {
-	font-size: 16px;
+	font-size: 1.000em;
 }
 .switchable ul li.address p {
 	margin-top: -90px;
